--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     <main>
         <div class="section-container">
             <h2>公會規則</h2>
-            <div class="item">公會戰結束後0星成員會直接請離，就算你有捐款，0星我會一律視為退遊不玩。</div>
+            <div class="item">公會戰結束後0星成員會直接請離，就算你有捐款，0星會一律視為退遊不玩。</div>
             <div class="item">所有捐款都是直接進入公會裡，會長和副會長是完全無法拿到任何一個鑽石，都是用來升級和開起會員欄位用而已。</div>
             <div class="item">我們拒絕伸手黨！拒絕吵架！拒絕騙子！各位相親相愛！恩恩愛愛！</div>
             <div class="item">若有違規者，第一次將會送你一個新身份！第二次就直接請離！如果是騙子沒有機會！直接請離並且永久黑名單！</div>
